Fixed spacing on next country button

--- a/css/styles.css
+++ b/css/styles.css
@@ -672,6 +672,7 @@ padding-right: 20px;
 				margin:0;
 				padding:0;
 				font-weight:normal;
+				line-height:1em;
 			}
 			
 	.story #arrowup .fa-arrow-circle-o-up, .fa-play-circle-o, .story  #facebookside  .fa-facebook-square, .story  #twitterside  .fa-twitter-square, .story  #shareside  .fa-share-alt-square, .story #comment .fa {
